--- a/style.css
+++ b/style.css
@@ -23,10 +23,43 @@ html {
   }
 
 .result {
+    height: 10em;
     width: 500px;
     background-color: rgb(245, 165, 231);
     text-align: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
     row-gap: 1em;
+}
+
+.result > div {
+    width: 100px;
+}
+
+.section {
+    display: flex;
+    width: 500px;
+    background-color: blueviolet;
+    justify-content: space-around;
+    align-items: baseline;
+    text-align: center;
+    color: white;
+}
+
+.section > div {
+    width: 100px;
+    height: 10em;
+    margin-top: 0;
+    background-color: blueviolet;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.section > div > p:last-child {
+    color: rgb(55, 255, 0);
+    font-size: 2em;
 }
